--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
     .contract{margin-top:16px;padding:12px;background:#071223;border:1px solid #0e263d;border-radius:var(--radius);display:flex;gap:8px;align-items:center;flex-wrap:wrap}
     .chip{padding:6px 10px;border-radius:999px;background:#0a1a2d;border:1px solid var(--border)}
     .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
-    .grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:16px}
     .tile{background:#0a182a;border:1px solid var(--border);border-radius:14px;padding:14px}
     .h3{font-size:18px;margin:0 0 6px}
     .sm{color:#b7cee0;font-size:14px}
     .faq .q{cursor:pointer;user-select:none;padding:12px;border:1px solid var(--border);border-radius:12px;background:#071a2b;margin-bottom:10px}
     .faq .a{display:none;padding:10px 12px;color:#cfe7ff;border-left:2px solid var(--accent2);margin:-6px 0 10px 6px}
+    .stickers{position:relative;overflow:hidden;border-radius:16px;min-height:220px;display:grid;place-items:center;text-align:center;padding:14px;
+      background: radial-gradient(800px 220px at 50% -20%, #0d2742 0%, transparent 60%), linear-gradient(180deg,#061222,#080f19);
+      border: 1px solid #102a41;}
+    .floaters span{position:absolute;top:-60px;font-size:28px;opacity:.5;pointer-events:none;filter:drop-shadow(0 10px 20px rgba(0,0,0,.4));animation:drift linear infinite}
+    @keyframes drift{from{transform:translateY(-60px) rotate(0)} to{transform:translateY(120vh) rotate(40deg)}}
     footer{margin:38px 0 22px;color:#7ea3bf;font-size:13px;display:flex;justify-content:space-between;flex-wrap:wrap}
-    @media(max-width:900px){.grid-3{grid-template-columns:1fr}.grid-2{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
@@ -62,9 +65,11 @@
     </nav>
   </header>
 
+  <!-- Hero -->
   <section class="card">
     <h1 class="big">A Telegram classic, reborn as a meme token.</h1>
     <p class="lead"><b>Tendy Tiger</b> is one of the original Telegram sticker packs — now brought to life on TON.</p>
+
     <div class="pricepill">
       <div class="kv"><b id="priceUsd">–</b> <small>USD</small></div>
       <div class="kv"><b class="chg" id="change24h">–</b> <small>24h</small></div>
@@ -73,6 +78,7 @@
       <button class="btn" id="refreshBtn" type="button">Refresh</button>
     </div>
     <div id="priceStatus" class="mini" style="margin-top:6px;"></div>
+
     <div class="contract">
       <span class="chip">Contract:</span>
       <span class="chip" id="shortAddr"></span>
@@ -81,18 +87,39 @@
     </div>
   </section>
 
+  <!-- Why / Features -->
   <section class="grid-3">
     <div class="tile"><h3 class="h3">Why $TENDY?</h3><p class="sm">A verified piece of Telegram culture — meme-forward, community-led.</p></div>
     <div class="tile"><h3 class="h3">On-chain Proofs</h3><p class="sm">LP locks and renounce links will be published here when ready.</p></div>
     <div class="tile"><h3 class="h3">Sticker DNA</h3><p class="sm">Celebrating Tendy, Utya, Cherry, Fromg and friends in raids & art.</p></div>
   </section>
 
+  <!-- Sticker vibes -->
+  <section class="card stickers">
+    <div class="floaters" id="floaters"></div>
+    <div>
+      <h3 class="h3">Sticker Vibes</h3>
+      <p class="sm">Floating Telegram-style emojis for fun vibes — later replace with custom Tendy art or sticker sprites.</p>
+    </div>
+  </section>
+
+  <!-- FAQ -->
   <section class="card faq">
     <h3 class="h3">FAQ</h3>
     <div class="q">Is this affiliated with Telegram?</div>
     <div class="a">No. This is a community meme project inspired by Telegram sticker culture. DYOR.</div>
     <div class="q">Where can I verify the token?</div>
     <div class="a">Use Tonviewer to see the jetton, holders, and transfers. Only trust the contract on this site.</div>
+  </section>
+
+  <!-- Lore -->
+  <section class="card">
+    <h3 class="h3">Tendy Tiger Lore</h3>
+    <p class="sm">
+      Tendy Tiger is one of the original Telegram sticker packs! A true collectible from Telegram’s early creative era, now brought to life on TON!
+      Alongside icons like Utya, Cherry, and Fromg, Tendy Tiger holds official status within Telegram culture.
+      It’s also featured with them in the limited “Happy Toys” version of the “Lush Bouquet” Telegram gift — a nod to its place among Telegram’s most recognized characters.
+    </p>
   </section>
 
   <footer>
@@ -122,9 +149,12 @@
   document.getElementById("copyBtn").onclick = async () => {await navigator.clipboard.writeText(TOKEN_ADDRESS);alert("Copied!");};
   document.getElementById("year").textContent = new Date().getFullYear();
 
-  const priceEl=document.getElementById("priceUsd"), chgEl=document.getElementById("change24h"),
-        liqEl=document.getElementById("liquidity"), fdvEl=document.getElementById("fdv"),
-        refreshBtn=document.getElementById("refreshBtn"), statusEl=document.getElementById("priceStatus");
+  const priceEl=document.getElementById("priceUsd"),
+        chgEl=document.getElementById("change24h"),
+        liqEl=document.getElementById("liquidity"),
+        fdvEl=document.getElementById("fdv"),
+        refreshBtn=document.getElementById("refreshBtn"),
+        statusEl=document.getElementById("priceStatus");
 
   function fmtUSD(n){const x=Number(n);if(!isFinite(x))return"–";if(x>=1)return"$"+x.toLocaleString(undefined,{maximumFractionDigits:4});if(x>=0.01)return"$"+x.toLocaleString(undefined,{maximumFractionDigits:6});return"$"+x.toExponential(2);}
   function fmtNum(n){const x=Number(n);if(!isFinite(x))return"–";if(x>=1e9)return(x/1e9).toFixed(2)+"B";if(x>=1e6)return(x/1e6).toFixed(2)+"M";if(x>=1e3)return(x/1e3).toFixed(2)+"k";return x.toFixed(0);}
@@ -144,16 +174,31 @@
       priceEl.textContent=fmtUSD(d.priceUsd);setChange(d.change24h);
       liqEl.textContent="$"+fmtNum(d.liquidity);fdvEl.textContent=d.fdv?"$"+fmtNum(d.fdv):"–";
       statusEl.textContent="Live from GeckoTerminal.";
-    }catch{priceEl.textContent="–";chgEl.textContent="–";liqEl.textContent="–";fdvEl.textContent="–";statusEl.textContent="Couldn’t load GeckoTerminal.";}
+    }catch{
+      priceEl.textContent="–";chgEl.textContent="–";liqEl.textContent="–";fdvEl.textContent="–";
+      statusEl.textContent="Couldn’t load GeckoTerminal. Check the pool id.";
+    }
     refreshBtn.disabled=false;
   }
   document.getElementById("refreshBtn").onclick=loadPrice;
   loadPrice();setInterval(loadPrice,60000);
 
+  // FAQ toggles
   document.querySelectorAll(".faq .q").forEach(q=>q.addEventListener("click",()=>{
     const a=q.nextElementSibling;const show=a.style.display!=="block";
-    document.querySelectorAll(".faq .a").forEach(x=>x.style.display="none");a.style.display=show?"block":"none";
+    document.querySelectorAll(".faq .a").forEach(x=>x.style.display="none");
+    a.style.display=show?"block":"none";
   }));
+
+  // Floaters
+  const icons=["🐯","🧸","🍒","🐥","🐸","💐","⭐","🧩"];
+  const floaters=document.getElementById("floaters");
+  function addFloater(i){const s=document.createElement("span");s.textContent=icons[i%icons.length];
+    s.style.left=Math.random()*100+"vw";const dur=10+Math.random()*16,del=Math.random()*-16;
+    s.style.animationDuration=dur+"s";s.style.animationDelay=del+"s";
+    floaters.appendChild(s);setTimeout(()=>s.remove(),(dur+1)*1000);}
+  for(let i=0;i<12;i++) addFloater(i);
+  setInterval(()=>addFloater(Math.floor(Math.random()*icons.length)),700);
 </script>
 </body>
 </html>
